--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-	"name": "cocoytech/ci3-ultimate",
-	"description" : "The CodeIgniter Application with Composer",
+	"name": "curlybytes/marigold",
+	"description" : "The Branch Application with branch expansion, branch information and internet module",
 	"scripts": {
 		"check-xdebug": [
 			"phpunit --dump-xdebug-filter ../../bin/build/xdebug-filter.php",
@@ -24,7 +24,7 @@
 		"install-production": "Install the standard setup with code efficiently."
 	  },
 	"require": {
-		"php": ">=5.3.2",
+		"php": ">=7.0.0",
 		"codeigniter/framework": "3.1.11",
 		
 		
