--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,14 @@ services:
     memcached:
       image: memcached:alpine
       container_name: marigold-memcached
-
+      networks:
+        - marigold-vnet
+        
     redis:
       image: redis:alpine
       container_name: marigold-redis
+      networks:
+        - marigold-vnet
 
     mysql:
       image: mysql:8.0
@@ -24,7 +28,9 @@ services:
         - MYSQL_USER=dbuser
         - MYSQL_PASSWORD=dbpassword
       ports:
-        - "7577:3306"
+        - "3306:3306"
+      networks:
+        - marigold-vnet
 
     webserver:
       image: nginx:alpine
@@ -33,8 +39,11 @@ services:
       volumes:
           - .:/application
           - ./bin/phpdocker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+          - ./src/log/nginx:/var/logs/nginx
       ports:
        - "7575:80"
+      networks:
+        - marigold-vnet
 
     php-fpm:
       build: bin/phpdocker/php-fpm
@@ -43,18 +52,26 @@ services:
       volumes:
         - .:/application
         - ./bin/phpdocker/php-fpm/php-ini-overrides.ini:/etc/php/7.3/fpm/conf.d/99-overrides.ini
+      networks:
+        - marigold-vnet
 
     composer:
-      image: composer:1.10.5
-      command: ["composer", "install"]
+      image: composer/composer:1.10.21
+      container_name: marigold-composer
+      command: ["composer","install"]
       working_dir: /application
+      environment:
+        - COMPOSER_CACHE_DIR=/application/src/cache/composer
       volumes:
         - .:/application
       depends_on:
         - php-fpm
-  
+      networks:
+        - marigold-vnet
+
     phpmyadmin:
       image: phpmyadmin/phpmyadmin:latest
+      container_name: marigold-phpymadmin
       working_dir: /application
       ports:
         - 7374:80
@@ -63,3 +80,9 @@ services:
         - PMA_HOST=mysql
       depends_on:
         - mysql
+      networks:
+        - marigold-vnet
+
+networks:
+  marigold-vnet:
+    driver: bridge
