--- a/phpunit-watcher.yml
+++ b/phpunit-watcher.yml
@@ -1,12 +1,26 @@
 watch:
   directories:
-    - src
+    - src/controllers
+    - src/helpers
+    - src/hooks
+    - src/language
+    - src/libraries
+    - src/service
+    - src/models
+    - tests
+  exclude:
+    - vendor 
+    - src/third_party
   fileMask: '*.php'
+  ignoreDotFiles: true
+  ignoreVCS: true
+  ignoreVCSIgnored: false
+
 notifications:
   passingTests: true
   failingTests: true
 phpunit:
   binaryPath: vendor/bin/phpunit
-  arguments: '--stop-on-failure'
+  arguments: '-vvv --testdox --colors=always'
   timeout: 180
 hideManual: true
