Fix(editor): xdebug3,php 7.4 using linux docker in vscode with w2l

--- a/bin/phpdocker/php-fpm/php-ini-overrides.ini
+++ b/bin/phpdocker/php-fpm/php-ini-overrides.ini
@@ -1,3 +1,12 @@
 upload_max_filesize = 100M
 post_max_size = 108M
+
+
 xdebug.mode = develop,trace,coverage,debug,gcstats,profile
+xdebug.client_host= host.docker.internal
+xdebug.start_with_request = yes
+xdebug.client_port = 9003
+xdebug.output_dir=/src/cache/xdebug
+xdebug.show_error_trace = on
+xdebug.show_exception_trace = on
+xdebug.show_local_vars = on
