--- a/bin/phpdocker/php-fpm/Dockerfile
+++ b/bin/phpdocker/php-fpm/Dockerfile
@@ -5,8 +5,8 @@ WORKDIR "/application"
 ARG DEBIAN_FRONTEND=noninteractive
 
 # Install selected extensions and other stuff
-RUN apt-get update \
-    && apt-get -y --no-install-recommends install php7.4-mbstring  php7.4-xml php7.4-curl php7.4-memcached php7.4-mysql php7.4-redis php7.4-sqlite3 php7.4-xdebug php7.4-phpdbg \
-    && apt-get clean; rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/*
+RUN apt-get update 
+RUN apt-get -y --no-install-recommends install php7.4-mbstring  php7.4-xml php7.4-curl php7.4-memcached php7.4-mysql php7.4-redis php7.4-sqlite3 php7.4-xdebug php7.4-phpdbg 
+RUN apt-get clean; rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/*
 
 COPY --from=composer:1.10.13 /usr/bin/composer /usr/bin/composer
