--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,9 @@
 		"check-watch": "use this to auto run phpunit tests scripts"
 	  },
 	"require": {
-		"codeigniter/framework": "3.1.11"
+		"chriskacerguis/codeigniter-restserver": "^3.1",
+		"codeigniter/framework": "3.1.11",
+		"zircote/swagger-php": "^3.1"
 	},
 	"repositories": [{
 		"type": "composer",
