--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
 	"require": {
 		"chriskacerguis/codeigniter-restserver": "^3.1",
 		"codeigniter/framework": "3.1.11",
+		"nltbinh/codeigniter-service-layer": "^1.0",
 		"zircote/swagger-php": "^3.1"
 	},
 	"repositories": [{
