--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1223,10 +1223,18 @@ FileETag None
 #     RewriteRule ^(.+)\.(\w+)\.(bmp|css|cur|gif|ico|jpe?g|m?js|a?png|svgz?|webp|webmanifest)$ $1.$3 [L]
 # </IfModule>
 
+
+<IfModule mod_rewrite.c>
+# remove trailing slashes from URLs
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_URI} (.*)/$
+RewriteRule ^(.+)/$ $1 [R=307,L]
+</IfModule>
+
 <IfModule mod_rewrite.c>
 RewriteEngine on
 RewriteCond $1 !^(index\.php|assets|images|js|css|uploads|favicon.png)
 RewriteCond %(REQUEST_FILENAME) !-f
 RewriteCond %(REQUEST_FILENAME) !-d
-RewriteRule ^(.*)$ ./index.php/$1 [L]
+RewriteRule ^(.*)$ ./index.php?/$1 [L,QSA]
 </IfModule>
