--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,9 @@
 	"require": {
 		"chriskacerguis/codeigniter-restserver": "^3.1",
 		"codeigniter/framework": "3.1.11",
+		"geocoder-php/google-maps-provider": "^4.6",
 		"nltbinh/codeigniter-service-layer": "^1.0",
+		"php-http/guzzle6-adapter": "^2.0",
 		"zircote/swagger-php": "^3.1"
 	},
 	"repositories": [{
