Feat(utility): add develbar tool

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
-S3_BUCKET="dotenv"
-SECRET_KEY="souper_seekret_key"
-BASE_LINK="http://localhost:7272/en/"
+GOOGLE_API_KEY=""
+BASE_LINK=""
+DATABASE_HOSTNAME=""
+DATABASE_NAME=""
+DATABASE_USERNAME=""
+DATABASE_PASSWORD=""
